--- a/CSS/Lesson11/pz1.css
+++ b/CSS/Lesson11/pz1.css
@@ -45,14 +45,63 @@ header input{
     margin-left: auto;
 }
 header nav li ul{
-    display: none;
+    opacity: 0;
+    background-color: white;
+    border: 1px solid gray;
+    border-radius: 7px;
+    width: 190px;
+    transition: all 0.3s easy-out;
 }
 header nav > ul{
     display: flex;
     gap: 15px;
     margin-left: 25px;
 }
+.dropdown{
+    position: relative;
+}
+.dropdown ul{
+    position: absolute;
+    left:0;
+    top: 150%;
+    overflow: hidden;
+    transform: translateY(-30px);
+    transition: all 0.3s ease-out;
+}
+.dropdown ul li a{
+    display: block;
+    padding: 5px 15px;
+    transition: all 0.3s linear;
+}
+.dropdown ul li a:hover{
+    background-color: #f5f5f5;
+}
+.dropdown:hover ul{
+    opacity: 1;
+    transform: translateY(0);
+}
+.dropdown:hover > a::after{
+    transform: rotate(180deg);
+}
 
+.dropdown a{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.dropdown > a:after{
+    display: block;
+    width: 8px;
+    content: " ";
+    border-top: 4px solid gray;
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent;
+    width: 0;
+    transition: all 0.3s linear;
+} 
+
+}
 @media (max-width:992px){
     header nav{
         display: none;
