верстка от начала до конца.часть3

--- a/Artefacts/css/custom.css
+++ b/Artefacts/css/custom.css
@@ -10,7 +10,8 @@
     --color-grey: #899d9d;
     --color-red: #e24949;
     --color-green-hover: #91AC46;
-
+    --color-green-text: #506829;
+    --color-green-focus: #83A440;
     --transition: all 0.2s linear;
 }
 
@@ -103,16 +104,19 @@ menu:hover{
     stroke: var(--color-green-active);
 }
 
+.shadowed-bg{
+    position: relative;
+}
+
 #main-banner{
     background-image: url('../img/mail_banner_bg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 175px;
     padding-bottom: 115px;
-    position: relative;
 }
 
-#main-banner::after{
+.shadowed-bg::after{
     content: ' ';
     display: block;
     opacity: 0.7;
@@ -122,6 +126,11 @@ menu:hover{
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.shadowed-bg .container{
+    z-index: 5;
+    position: relative;
 }
 
 #main-banner .container{
@@ -159,12 +168,12 @@ menu:hover{
     fill: var(--color-green-active);
 }
 
-#main-banner a svg{
+a.arrowed svg{
     transition: var(--transition);
 }
 
-#main-banner a:hover svg,
-#main-banner a:focus svg{
+a.arrowed:hover svg,
+a.arrowed:focus svg{
     width: 51px;
     height: 16px;
 }
@@ -269,4 +278,121 @@ menu:hover{
 .slider-nav button{
     background: none;
     border: none;
+}
+
+.block-header{
+    font-style: italic;
+    color: var(--color-white);
+    font-size: 48px;
+    line-height: 100%;
+    margin-bottom: 30px;
+}
+
+#articles{
+    padding-bottom: 60px;
+}
+.article-preview{
+    background-color: var(--color-green);
+    padding: 16px;
+    padding-bottom: 24px;
+}
+
+.article-preview h3{
+    font-weight: 700;
+    margin-bottom: 8px;
+}
+ 
+.article-preview h3{
+    color: var(--color-green-text);
+}
+
+.article-preview a{
+    color: var(--color-bg-shade);
+    font-weight: 700;
+}
+
+.article-preview a:hover{
+    color:var(--color-green-active);
+}
+
+.article-preview a svg path{
+    transition: var(--transition);
+}
+
+.article-preview a:hover svg path{
+    fill:var(--color-green-active);
+}
+
+#contact-form{
+    background-image: url('../img/form_bg.jpg');
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+
+.contact-form p{
+    color: var(--color-white);
+}
+
+#contact-form .block-header {
+    margin-bottom: 16px;
+}
+
+.contact-form .col-4 form{
+    gap: 24px;
+}
+
+.contact-form .form-control{
+    border-radius: 0;
+    height: 45px;
+}
+
+.contact-form button.button{
+    background-color: var(--color-green);
+    font-weight: 700;
+    color: var(--color-bg-shade);
+    align-self: flex-start;
+    transition: var(--transition);
+}
+
+.contact-form button.button:hover{
+    background-color: var(--color-green-hover);
+    border-color: var(--color-green-hover);
+}
+
+/*.contact-form .form-control:hover{
+    background: var(--color-grey);
+    color: var(--color-white);
+    border-color: var(--color-grey);
+}
+
+.contact-form .form-control:hover::placeholder{
+    color:var(--color-white);
+}
+
+.contact-form .form-control:hover::-moz-placeholder{
+    color:var(--color-white);
+}
+
+.contact-form .form-control:hover::-webkit-input-placeholder{
+    color:var(--color-white);
+}*/
+
+.contact-form .form-control:focus{
+    border-radius: 0;
+    box-shadow: none;
+    outline-color: var(--color-green-focus);
+    outline-style: solid;
+    outline-width: 1px;
+    outline-offset: 2px;
+}
+
+.contact-form .form-control ~ .invalid-feedback{
+    display: none;
+}
+
+.contact-form .form-control .is-invalid ~ .invalid-feedback{
+    display: block;
 }
