--- a/React/Quickstart/src/scss/index.scss
+++ b/React/Quickstart/src/scss/index.scss
@@ -1,10 +1,34 @@
+html, body{
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    width: 100%;
+}
+
+body > div{
+    width: 50%;
+    border: 1px solid black;
+    flex-shrink: 0;
+}
 h1{
     margin: 0;
     padding: 0;
 }
 
+.btn{
+    border: none;
+    padding: 10px 30px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
 .btn-danger{
     background-color: red;
+}
+
+.btn-info{
+    background-color: aqua;
 }
 
 h1,p {
@@ -15,3 +39,17 @@ h1,p {
     align-items: center;      
 }
 
+#app-3{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.todo{
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    width: 70%;
+}
+.todo h1{
+    padding: 7px 25px;
+}
