--- a/React/Expenses/src/scss/expenses.scss
+++ b/React/Expenses/src/scss/expenses.scss
@@ -17,8 +17,6 @@ body, html{
     background-color: $bodyColor;
     display: flex;
     align-items: center;
-    justify-content: center;
-    @include flex-center;
 }
 
 .expenses{
@@ -29,6 +27,7 @@ body, html{
     max-width: 600px;
     border:1px solid gray;
     color: rgb(232, 238, 252);
+    margin-left: 30px;
 
     & h1{
         margin: 0;
@@ -39,8 +38,15 @@ body, html{
 
     & form{
         display: flex;
+        flex-direction: column;
         margin-bottom: 10px;
         gap:7px;
+
+        & div{
+            display: flex;
+            flex-direction: column;
+            gap:5px;
+        }
 
         & input{
             border-radius: $smallBorederRadius;
@@ -53,6 +59,7 @@ body, html{
             &:focus{
                 outline: none;
             }
+            height: 40px;
         }
 
         & button{
@@ -72,22 +79,30 @@ body, html{
         padding: 0;
         display: flex;
         flex-direction: column;
-        gap:5px;
+        position: fixed;
+        right: 0;
+        top: 0;
+        width: 600px;
+        height: 100vh;
+        overflow-y: scroll;
+        background-color: rgb(41, 36, 36);
+        border-left: 1px solid white;
 
         & .item{
             width: 100%;
-            border-radius: $smallBorederRadius;
-            border: 1px solid gray;
             display: flex;
+            justify-content: space-between;
+            gap:25px;
             padding: 10px;
             align-items: center;
             gap:10px;
-            background: rgba(0, 0, 0, 0.18);
 
-            & span{
-                &.done{
-                    text-decoration: line-through;
-                }
+            &.positive{
+                background-color: rgb(5, 88, 5);
+            }
+
+            &.negative{
+                background-color: rgb(204, 52, 52);
             }
             
             & button{
@@ -101,5 +116,31 @@ body, html{
                 background-color: $todoBgColor;
             }
         }
+    }
+}
+
+.empty{
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 600px;
+    height: 100vh;
+    overflow-y: scroll;
+    padding: 15px;
+    background-color: rgb(41, 36, 36);
+    border-left: 1px solid white;
+}
+
+.total{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-bottom: 15px;
+
+    & span{
+        font-weight: bold;
+        font-size: 18px;
+        display: block;
+        margin: 0 5px;
     }
 }
